# adafruit-feather-esp32c6-embassy-examples

./: Cargo.toml  README.md
.agent/skills/: rs-matter-setup.md
.cargo/: config.toml
.github/workflows/: rust_ci.yml
examples/: matter_thread_light.rs
src/: main.rs
tests/: hello_test.rs
