[package]
edition      = "2024"
name         = "adafruit-feather-esp32c6-embassy-examples"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "adafruit-feather-esp32c6-embassy-examples"
path = "src/main.rs"
test = false

[[example]]
name = "matter_thread_light"
path = "examples/matter_thread_light.rs"
required-features = ["thread"]

[[test]]
harness = false
name    = "hello_test"

[features]
default = ["thread"]
thread = [
    "dep:esp-sync-old",
    "dep:esp-radio",
    "dep:tinyrlibc",
    "dep:esp-metadata-generated",
    "dep:rs-matter-embassy",
    "dep:openthread",
]

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8", features = ["defmt", "embassy", "esp32c6", "esp-radio", "esp-alloc"] }

esp-alloc              = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
defmt                  = "1.0.1"
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8", features = ["defmt", "esp32c6"] }

embassy-executor = { version = "0.9.0", features = ["defmt"] }
embassy-time     = { version = "0.4.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target       = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

esp-sync-old = { package = "esp-sync", version = "0.1.1", features = ["esp32c6"], optional = true }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8", features = ["esp32c6", "ble", "defmt", "unstable"], optional = true }

tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"], optional = true }
esp-metadata-generated = { version = "0.3", optional = true }
rs-matter-embassy = { git = "https://github.com/sysgrok/rs-matter-embassy", features = ["esp", "openthread", "defmt"], optional = true }
openthread = { version = "0.1", features = ["force-esp-riscv-toolchain"], optional = true }


[dev-dependencies]
embedded-test = { version = "0.7.1", features = [
  "defmt",
  "embassy-010",
  "external-executor",
] }

[patch.crates-io]
rs-matter = { git = "https://github.com/melastmohican/rs-matter.git", branch = "esp32c6-thread-fixes" }
rs-matter-stack = { git = "https://github.com/sysgrok/rs-matter-stack", branch = "next" }
openthread = { git = "https://github.com/sysgrok/openthread.git", branch = "next" }
# Pin the entire esp-hal monorepo to the same git rev that rs-matter-embassy
# uses. This avoids links conflicts (esp-rom-sys, esp-riscv-rt) between the
# crates.io versions and the git version.
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-phy = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }
esp-metadata-generated = { git = "https://github.com/esp-rs/esp-hal", rev = "e156b5453a8adc123b7a8b6aa08e0698ec87dfe8" }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
